<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.fedbon</groupId>
    <artifactId>otus-spring-homeworks</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>hw01</module>
        <module>hw02</module>
        <module>hw03</module>
        <module>hw04</module>
        <module>hw05</module>
        <module>hw06</module>
        <module>hw07</module>
        <module>hw08</module>
        <module>hw10</module>
    </modules>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.5</version>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <spring-shell-starter.version>3.1.4</spring-shell-starter.version>

        <h2.version>2.2.224</h2.version>
        <mongock.version>4.3.8</mongock.version>
        <flapdoodle.version>4.11.0</flapdoodle.version>
        <jquery.version>3.7.1</jquery.version>

        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.source>17</maven.compiler.source>
        <maven-checkstyle-plugin.version>3.3.0</maven-checkstyle-plugin.version>

        <checkstyle-plugin.version>3.3.0</checkstyle-plugin.version>
        <checkstyle.version>10.9.1</checkstyle.version>
        <checkstyle.config.url>
            https://raw.githubusercontent.com/OtusTeam/Spring/master/checkstyle.xml
        </checkstyle.config.url>

        <opencsv.version>5.8</opencsv.version>
        <snakeyaml.version>2.0</snakeyaml.version>
    </properties>

</project>
